syntax = "proto3";  // tells the protobuf compiler what is the syntax we are going to use , we specify which protobuf versions we are using

option csharp_namespace = "Discount.GRPC";  // tells the protobuf compiler to generate Csharp classes within the specific namespace(Discount.GRPC)

package discount;

// this file represents the representation layer
//the discount servic definition
service DiscountProtoService {
	//Discount crud operations
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string productName= 1;
}
 
message CouponModel{
	int32 id =1;
	string productName=2;
	string description=3;
	int32 amount=4;
}

message CreateDiscountRequest {
	CouponModel coupon=1;
}

message UpdateDiscountRequest {
	CouponModel coupon =1;
}

message DeleteDiscountRequest {
	string productName=1;
}

message DeleteDiscountResponse {
	bool isSuccess=1;
}